# doomer

./: .env.template  .gitignore  README.md  doomer.service  pyproject.toml  pytest.ini  requirements.txt  run.sh
bot/: DoomerCog.py  HastebinCog.py  discord_utils.py  main.py
docs/: usage.md
doomer/: SettingsManager.py  __init__.py  discord_utils.py  language_models.py  main.py  settings.py
doomer/cogs/: DoomerCog.py  HastebinCog.py  doomercog.py  hastebincog.py  utilitycog.py
tests/: test_language_models.py
