[tool.poetry]
name = "doomer"
version = "0.1.0"
description = ""
authors = ["Jonathan Miller <jon@jmill.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.9.3"
requests = "^2.25.1"
cogwatch = "^2.1.0"
pandas = "^1.3.0"
"discord.py" = "^1.7.3"
transformers = {extras = ["torch"], version = "^4.8.2"}
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
black = "^21.6b0"
mypy = "^0.910"
pytest = "^6.2.4"
ipykernel = "^6.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = 'doomer.main:start'